--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,15 @@
-langchain-community
+streamlit>=1.31.0
+groq>=0.2.4
+langchain>=0.1.14
+langchain-community>=0.0.23
+langchain-groq>=0.1.4
+chromadb>=0.4.24
+beautifulsoup4>=4.12.3
+requests>=2.31.0
+tqdm>=4.66.4
+lxml>=5.2.1
+re>=0.3.1 
+pandas>=2.2.2
+uuid>=1.30
+python-dotenv>=1.0.1
+pydantic>=1.10.13
