--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ groq>=0.2.4
 langchain>=0.1.14
 langchain-community>=0.0.23
 langchain-groq==0.1.4
+git+https://github.com/langchain-ai/langchain-groq.git
 chromadb>=0.4.24
 beautifulsoup4>=4.12.3
 requests>=2.31.0
